--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# MYSQL
+# spring.datasource.url=jdbc:mysql://localhost:3306/crudpessoa
+# spring.datasource.username=root
+# spring.datasource.password=root
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# FLYWAY
+# spring.flyway.url=jdbc:mysql://localhost:3306/crudpessoa
+# spring.flyway.user=root
+# spring.flyway.password=root
+# spring.flyway.locations=classpath:db/migration
+
+# H2
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Hibernate
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
