--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Hibernate
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
