--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MYSQL
-# spring.datasource.url=jdbc:mysql://localhost:3306/crudpessoa
-# spring.datasource.username=root
-# spring.datasource.password=root
+# spring.datasource.url=jdbc:${DATABASE_URL}
+# spring.datasource.username=${USER}
+# spring.datasource.password=${PASSWORD}
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # FLYWAY
