--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Swagger
+springdoc.api-docs.path=/api-docs
+
+#Server
+server.port=8080
+spring.mvc.servlet.path=/
+server.servlet.context-path=/
